Fixed the medium screen size responsiveness for the cards, modal. Made the medium size show the static map and species selection side by side instead of just large and above screen sizes. Fixed the positioning witht he close modal button so it doesn't overlap the star or title anymore.

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@
 .card {
 	height: 50vh;
 	width: 90vw;
-	@apply lg:w-11/12 lg:m-5;
+	@apply md:w-11/12 md:m-5;
 }
 
 .cardImageContainer {
